feat: Update readme and images

--- a/graph_rag/graph_rag.ipynb
+++ b/graph_rag/graph_rag.ipynb
@@ -4,95 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GraphRAG Implementation with LlamaIndex - V2\n",
+    "# GraphRAG Implementation with LlamaIndex\n",
     "\n",
     "[GraphRAG (Graphs + Retrieval Augmented Generation)](https://www.microsoft.com/en-us/research/project/graphrag/) combines the strengths of Retrieval Augmented Generation (RAG) and Query-Focused Summarization (QFS) to effectively handle complex queries over large text datasets. While RAG excels in fetching precise information, it struggles with broader queries that require thematic understanding, a challenge that QFS addresses but cannot scale well. GraphRAG integrates these approaches to offer responsive and thorough querying capabilities across extensive, diverse text corpora.\n",
     "\n",
-    "This notebook provides guidance on constructing the GraphRAG pipeline using the LlamaIndex PropertyGraph abstractions using Neo4J.\n",
-    "\n",
-    "This notebook updates the GraphRAG pipeline to v2. If you haven’t checked v1 yet, you can find it [here](https://github.com/run-llama/llama_index/blob/main/docs/docs/examples/cookbooks/GraphRAG_v1.ipynb). Following are the updates to the existing implementation:\n",
-    "\n",
-    "1. Integrate with Neo4J Graph database.\n",
-    "2. Embedding based retrieval.\n",
-    "\n"
+    "This notebook provides guidance on constructing the GraphRAG pipeline using the LlamaIndex PropertyGraph abstractions using Neo4J."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download ollama models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'OLLAMA_EMBEDDING_MODEL': 'nomic-embed-text:latest',\n",
-       " 'OLLAMA_LLM_MODEL': 'gemma3n:e4b'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from yaml import load, safe_load\n",
-    "\n",
-    "with open(\"config.yaml\") as f:\n",
-    "\tconfig = safe_load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ollama import Client\n",
-    "\n",
-    "client = Client(\n",
-    "\thost='http://localhost:11434',\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.pull()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load Data\n",
-    "\n",
-    "We will use a sample news article dataset retrieved from Diffbot, which Tomaz has conveniently made available on GitHub for easy access.\n",
-    "\n",
-    "The dataset contains 2,500 samples; for ease of experimentation, we will use 50 of these samples, which include the `title` and `text` of news articles."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "import pandas as pd\n",
-    "from llama_index.core import Document\n",
-    "\n",
-    "news = pd.read_csv(\n",
-    "    \"https://raw.githubusercontent.com/tomasonjo/blog-datasets/main/news_articles.csv\"\n",
-    ")[:40]\n",
-    "\n",
-    "news.head()"
+    "## Data preparation"
    ]
   },
   {
@@ -103,41 +26,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "documents = [\n",
-    "    Document(text=f\"{row['title']}: {row['text']}\")\n",
-    "    for i, row in news.iterrows()\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/85/py72kfsd3zlgfwv2_dp2wb5m0000gn/T/ipykernel_64426/945603568.py:8: DtypeWarning: Columns (4,5,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  script_lines_df = pd.read_csv(\"data/simpsons_script_lines.csv\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from llama_index.core import Document\n",
-    "import os\n",
-    "\n",
-    "characters_df = pd.read_csv(\"data/simpsons_characters.csv\")\n",
-    "episodes_df = pd.read_csv(\"data/simpsons_episodes.csv\")\n",
-    "locations_df = pd.read_csv(\"data/simpsons_locations.csv\")\n",
-    "script_lines_df = pd.read_csv(\"data/simpsons_script_lines.csv\")"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -145,9 +33,9 @@
    "source": [
     "documents = []\n",
     "\n",
-    "all_docs_paths = os.listdir(\"scripts/\")\n",
+    "all_docs_paths = os.listdir(\"data/\")\n",
     "for doc_path in all_docs_paths:\n",
-    "\twith open(f\"scripts/{doc_path}\", \"r\") as f:\n",
+    "\twith open(f\"data/{doc_path}\", \"r\") as f:\n",
     "\t\ttext = f.read()\n",
     "\t\tdocuments.append(Document(text=text))"
    ]
@@ -156,21 +44,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup API Key and LLM"
+    "## Setup LLM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "\n",
+    "# load cofig.yaml\n",
+    "with open(\"../config.yaml\", \"r\") as f:\n",
+    "\tconfig = yaml.safe_load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from llama_index.llms.ollama import Ollama\n",
     "\n",
     "llm = Ollama(\n",
-    "    model=\"gemma3n:e4b\", \n",
+    "    model=config[\"OLLAMA_LLM_MODEL\"], \n",
     "    request_timeout=7200.0\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -866,30 +767,6 @@
     "    max_paths_per_chunk=2,\n",
     "    parse_fn=parse_fn,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Docker Setup And Neo4J setup\n",
-    "\n",
-    "To launch Neo4j locally, first ensure you have docker installed. Then, you can launch the database with the following docker command.\n",
-    "\n",
-    "```\n",
-    "docker run \\\n",
-    "    -p 7474:7474 -p 7687:7687 \\\n",
-    "    -v $PWD/data:/data -v $PWD/plugins:/plugins \\\n",
-    "    --name neo4j-apoc \\\n",
-    "    -e NEO4J_apoc_export_file_enabled=true \\\n",
-    "    -e NEO4J_apoc_import_file_enabled=true \\\n",
-    "    -e NEO4J_apoc_import_file_use__neo4j__config=true \\\n",
-    "    -e NEO4JLABS_PLUGINS=\\[\\\"apoc\\\"\\] \\\n",
-    "    neo4j:latest\n",
-    "```\n",
-    "From here, you can open the db at http://localhost:7474/. On this page, you will be asked to sign in. Use the default username/password of neo4j and neo4j.\n",
-    "\n",
-    "Once you login for the first time, you will be asked to change the password."
    ]
   },
   {
