Add final adjustments

--- a/graph_rag/graph_rag.ipynb
+++ b/graph_rag/graph_rag.ipynb
@@ -778,6 +778,7 @@
     "            # Update entity_info\n",
     "            entity_info[node].add(cluster_id)\n",
     "\n",
+    "\t\t\t# Get information about the neighbors of a given node, including relationship and description\n",
     "            for neighbor in nx_graph.neighbors(node):\n",
     "                edge_data = nx_graph.get_edge_data(node, neighbor)\n",
     "                if edge_data:\n",
@@ -798,8 +799,6 @@
     "            ),\n",
     "            ChatMessage(role=\"user\", content=text),\n",
     "        ]\n",
-    "        # hardcode\n",
-    "        # llm = Ollama(model=\"gemma3n:e4b\", request_timeout=60.0)\n",
     "        response = llm.chat(messages)\n",
     "        clean_response = re.sub(r\"^assistant:\\s*\", \"\", str(response)).strip()\n",
     "        return clean_response\n",
@@ -1058,7 +1057,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting paths from text:   0%|          | 0/14 [00:00<?, ?it/s]"
+      "Extracting paths from text:  93%|█████████▎| 13/14 [11:55<00:45, 45.34s/it]"
      ]
     }
    ],
@@ -1335,57 +1334,6 @@
     "    \"What clues were discovered by Chief Wiggum during the investigation?\"\n",
     ")\n",
     "display(Markdown(f\"{response.response}\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Querying (once indexed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_store = GraphRAGStore(\n",
-    "    username=\"neo4j\", \n",
-    "    password=\"neo4j123\",\n",
-    "    # Copy from Neo4j desktop\n",
-    "    url=\"neo4j://127.0.0.1:7687\",\n",
-    "    # database name\n",
-    "    database=\"simpsons\",\n",
-    ")\n",
-    "# LLM model to use for generating community summaries\n",
-    "graph_store.llm = llm\n",
-    "# load from existing graph/vector store\n",
-    "index = PropertyGraphIndex.from_existing(\n",
-    "    property_graph_store=graph_store,\n",
-    "    embed_model=ollama_embedding,\n",
-    "    llm=llm,\n",
-    "    # embed_kg_nodes=True,\n",
-    ")\n",
-    "# index = PropertyGraphIndex(\n",
-    "#     # Documents to index\n",
-    "#     nodes=nodes,\n",
-    "#     # Embedding model to use for indexing\n",
-    "#     embed_model=ollama_embedding,\n",
-    "#     # LLM model to use for querying\n",
-    "#     llm=llm,\n",
-    "#     # Knowledge graph extractor\n",
-    "#     kg_extractors=[kg_extractor],\n",
-    "#     # Graph store and community and community summary building logic\n",
-    "#     property_graph_store=graph_store,\n",
-    "#     show_progress=True,\n",
-    "# )\n",
-    "query_engine = GraphRAGQueryEngine(\n",
-    "    graph_store=graph_store,\n",
-    "    llm=llm,\n",
-    "    index=index,\n",
-    "    similarity_top_k=10,\n",
-    ")"
    ]
   }
  ],
