Add final adjustments

--- a/graph_rag/graph_rag.ipynb
+++ b/graph_rag/graph_rag.ipynb
@@ -1057,7 +1057,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting paths from text:  93%|█████████▎| 13/14 [11:55<00:45, 45.34s/it]"
+      "Extracting paths from text: 100%|██████████| 14/14 [12:56<00:00, 55.50s/it]\n",
+      "Generating embeddings: 100%|██████████| 2/2 [00:05<00:00,  2.88s/it]\n",
+      "Generating embeddings: 100%|██████████| 7/7 [00:01<00:00,  3.95it/s]\n"
      ]
     }
    ],
@@ -1080,18 +1082,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[EntityNode(label='Person', embedding=None, properties={'id': 'Homer Simpson', 'entity_description': 'A person who is forgetful.', 'triplet_source_id': '9aef38af-2e0f-45a8-b849-acc6a0d66745'}, name='Homer Simpson'),\n",
-       " Relation(label='is_nicknamed', source_id='Homer Simpson', target_id='Dukes', properties={'triplet_source_id': 'd96ab1f2-0978-4d11-bfa4-76fd48f1a3c2', 'relationship_description': 'Homer Simpson is nicknamed Dukes by Bart Simpson.'}),\n",
-       " EntityNode(label='Person', embedding=None, properties={'id': 'Dukes', 'entity_description': 'Dukes is a nickname used by Bart Simpson to refer to Homer Simpson, indicating a disrespectful and teasing relationship.', 'triplet_source_id': 'd96ab1f2-0978-4d11-bfa4-76fd48f1a3c2'}, name='Dukes')]"
+       " Relation(label='breaks', source_id='Homer Simpson', target_id='Piggy Bank', properties={'triplet_source_id': '0b54bf65-b79d-42fd-b2a9-9a1284f5a928', 'relationship_description': 'Homer breaks open his piggy bank in a moment of despair.'}),\n",
+       " EntityNode(label='Object', embedding=None, properties={'id': 'Piggy Bank', 'entity_description': 'A container used for saving money, which Homer breaks open in a moment of despair.', 'triplet_source_id': '0b54bf65-b79d-42fd-b2a9-9a1284f5a928'}, name='Piggy Bank')]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1115,7 @@
        " 'triplet_source_id': '9aef38af-2e0f-45a8-b849-acc6a0d66745'}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,17 +1126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'triplet_source_id': 'd96ab1f2-0978-4d11-bfa4-76fd48f1a3c2',\n",
-       " 'relationship_description': 'Homer Simpson is nicknamed Dukes by Bart Simpson.'}"
+       "{'triplet_source_id': '0b54bf65-b79d-42fd-b2a9-9a1284f5a928',\n",
+       " 'relationship_description': 'Homer breaks open his piggy bank in a moment of despair.'}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
