--- a/rag/rag_limited.ipynb
+++ b/rag/rag_limited.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "5eddd73c",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "666eb35b",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "71405ea6",
    "metadata": {},
    "outputs": [],
@@ -432,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "0f551c52",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59eb0ae6f1474cfe9237f1847be3e63d",
+       "model_id": "74874ca649b84ef08426540fed967ac4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "2f009885",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f77e3c84",
    "metadata": {},
    "outputs": [],
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "a5f03b45",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "e856e44a",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "0c1fa3a8",
    "metadata": {},
    "outputs": [],
@@ -531,12 +531,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "849d868d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_embedding = embedding_model.get_text_embedding_batch([query])\n",
+    "query_embedding = embedding_model.get_text_embedding_batch([query_1])\n",
     "query_embedding: np.ndarray = np.array(query_embedding, dtype=np.float32)\n",
     "faiss.normalize_L2(query_embedding)\n",
     "\n",
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "af8e7450",
    "metadata": {},
    "outputs": [],
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "57e666dc",
    "metadata": {},
    "outputs": [],
